<resources>
    <string name="app_name">My STECH</string>
    <string name="name_sriwattana">Sriwattana</string>
    <string name="user">User :</string>
    <string name="password">Password :</string>
    <string name="new_register">New Register</string>
    <string name="Login">Login</string>
    <string name="name">Name</string>
    <string name="name1">Name :</string>
    <string name="surname">Surname :</string>
    <string name="address">Address :</string>
    <string name="save">save</string>
</resources>
