<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stech.khamtad.oraphan.mystech.MainActivity">

   <LinearLayout
       android:layout_marginTop="@dimen/margin"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ImageView
           android:layout_gravity="center_horizontal"
           android:scaleType="centerInside"
           android:src="@drawable/logo"
           android:layout_width="200dp"
           android:layout_height="wrap_content" />

       <TextView
           android:textColor="@color/colortext"
           android:layout_gravity="center_horizontal"
           android:textStyle="bold"
           android:textSize="@dimen/h1"
           android:text="@string/name_sriwattana"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>


       <LinearLayout
           android:layout_marginTop="@dimen/margin2"
           android:layout_marginRight="@dimen/margin"
           android:layout_marginLeft="@dimen/margin"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <ImageView
               android:src="@mipmap/ic_user"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

           <EditText
               android:hint="@string/user"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />




       </LinearLayout> <LinearLayout

           android:layout_marginRight="@dimen/margin"
           android:layout_marginLeft="@dimen/margin"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <ImageView
               android:src="@mipmap/ic_password"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

           <EditText
               android:hint="@string/password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />




       </LinearLayout>



   </LinearLayout>


</RelativeLayout>
